<?xml version="1.0"?>
<package format="2">
  <name>arm_service</name>
  <version>0.0.0</version>
  <description>The arm_services package: Used to communicate with Jaco robotoic arm from ReGround Projekt</description>
  <author email="gjulian@uos.de">Julian Gaal</author>
  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
  <license>GNU General Public License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>anchor_msgs</build_depend>
  <build_depend>jaco_manipulation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>anchor_msgs</build_export_depend>
  <build_export_depend>jaco_manipulation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>anchor_msgs</exec_depend>
  <exec_depend>jaco_manipulation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
